test: new tests + some fixes